--- a/the-wild-oasis-website/package.json
+++ b/the-wild-oasis-website/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "prod": "next build && next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@supabase/supabase-js": "^2.45.0",
     "date-fns": "^3.6.0",
     "next": "14.2.5",
     "react": "^18",
